# VoxelLabeling

./: .gitignore  CMakeLists.txt  VoxelReconstruction.vcxproj  VoxelReconstruction.vcxproj.filters
data/cam1/: boardcorners.xml  config.xml  intrinsics.xml
data/cam2/: boardcorners.xml  config.xml  intrinsics.xml
data/cam3/: boardcorners.xml  config.xml  intrinsics.xml
data/cam4/: boardcorners.xml  config.xml  intrinsics.xml
src/: VoxelReconstruction.cpp  main.cpp
src/controllers/: Camera.cpp  Camera.h  Glut.cpp  Glut.h  Reconstructor.cpp  Reconstructor.h  Scene3DRenderer.cpp  Scene3DRenderer.h  arcball.cpp
src/utilities/: General.cpp  General.h
x64/Debug/: VoxelReconstruction.exe.recipe  VoxelReconstruction.ilk  VoxelReconstruction.vcxproj.FileListAbsolute.txt  vc143.idb
x64/Debug/VoxelRec.D024333B.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  VoxelReconstruction.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
x64/Release/: VoxelReconstruction.exe.recipe  VoxelReconstruction.iobj  VoxelReconstruction.ipdb  VoxelReconstruction.vcxproj.FileListAbsolute.txt
x64/Release/VoxelRec.D024333B.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  VoxelReconstruction.lastbuildstate  VoxelReconstruction.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
